--- a/Index.html
+++ b/Index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
 <html>
  <head>
-
+   <title>Киткат</title>
  </head>
  <body>
-
+   <h1>КИТКАТ</h1>
+   <h3>Возможно ты еще не знаешь, но я управляю тобой.</h3>
+   <h6>Ну не удержалась))</h6>
  </body>
 </html>
