--- a/Index.html
+++ b/Index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
 <html>
  <head>
+   <meta name="keywords" content="Киткат, banan, учеба">
    <title>Киткат</title>
  </head>
  <body>
