--- a/Index.html
+++ b/Index.html
@@ -2,6 +2,7 @@
 <html>
  <head>
    <meta name="keywords" content="Киткат, banan, учеба">
+   <meta http-equiv="content-type" content="doodle/html; charset=utf-8">
    <title>Киткат</title>
  </head>
  <body>
