--- a/Index.html
+++ b/Index.html
@@ -6,7 +6,7 @@
    <title>Киткат</title>
  </head>
  <body>
-   <h1>КИТКАТ</h1>
+   <div><h1><b>КИТКАТ</b></h1></div>
    <h3>Возможно ты еще не знаешь, но я управляю тобой.</h3>
    <h6>Ну не удержалась))</h6>
  </body>
