--- a/Index.html
+++ b/Index.html
@@ -9,7 +9,6 @@
    <div><h1><b><em>КИТКАТ</em></b></h1></div>
    <h3><big>Возможно ты еще не знаешь, но я управляю тобой.</big></h3>
    <h6><small>Ну не удержалась))<small></h6>
-   var pc = document.getElementById("pic_cntr");
-   pc.innerHTML="<img src='http://androidjam.ru/images/uploads/records/0be65d0552b49bf6f70541030bc6b50f.jpg'>"
+   <img src='http://androidjam.ru/images/uploads/records/0be65d0552b49bf6f70541030bc6b50f.jpg'>"
  </body>
 </html>
